--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-
+<!--Author: Anna Hyer Spring 2023 Class: Fundamentals of Software Engineering-->
 
 <!DOCTYPE html>
 <html>
@@ -23,11 +23,29 @@
             <input name="password" type="text" placeholder="password">
             <button type="submit">submit</button>
         </form>
-        <div id  = "seeds">My Seeds</div>
+        <button type="submit" onclick="seedvault_clicked()" >Python</button>   <!--go to seedvault function when button clicked-->
+        <script type="text/javascript" src="script.js"></script>
+        <!--makes main.py module accessible to front end-->
+        <script>
+            function page_load(){
+                $.ajax({
+                    url: "main.py"
+                })
+            }
+        </script>
+        <!--action when button is clicked--follows this route (function)-->
+        <script>
+            function seedvault_clicked(){
+                $.ajax({
+                    url: "/seedvault"
+                })   
+            }
+        </script>
         <h2>seed box</h2>
+        <p><a href="/seedvault">seedvault</a></p>    <!--link to seedvault page-->
         <h4>Join Us</h4>
     </body>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </html>
 
 
