select form is hidden

--- a/db_interface.html
+++ b/db_interface.html
@@ -32,7 +32,7 @@
 		<form action="nothing" >
 		<label for="data_display">Choose your data:</label>
 		<select name="data_display">
-			<option value="select" disabled>Select</option>
+			<option value="" selected disabled hidden>Select</option>
 			<option value="sensor">My Sensors</option>
 			<option value="data">Data</option>
 			<option value="Meta">Sensor Metadata</option>
